src/index.css
body {
    margin: 0;
    padding: 0;
    font-family: "Lexend", sans-serif;
    font-style: normal;
    font-size: 0.9rem;
    font-weight: 400;
    background: #FCFCFC;
    position: relative;
}

input[type="text"], input[type="password"] {
    border: none;
    outline: none;
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
}

input[type="text"]:focus,
input[type="text"]:active,
input[type="password"]:focus,
input[type="password"]:active {
    outline: none;
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    border: none;
}

::-webkit-scrollbar {
    display: none;
}

.localization-container {
    max-width: 100%;
    height: 40px;
    background: #FFF;
    border-radius: 100px;
    margin: 5px 15px 0 15px;
    display: flex;
    align-items: center;
    gap: 10px;
    padding-left: 15px;

}

.localization-text {
    font-weight: 500;
}

.welcome-text-container {
    max-width: 100%;
    height: 80px;
    font-size: 24px;
    font-weight: 500;
    margin-left: 30px;
    display: flex;
    align-items: center;
}

.nav-container {
    overflow-y: scroll;
    display: flex;
    gap: 10px;
    padding-bottom: 30px;
    padding-right: 15px;
}

.nav-category {
    padding: 9px 20px;
    border-radius: 100px;
    background: #FFF;
    color: #7D7D7D;
    text-wrap: nowrap;
}

.nav-category.active {
    background: #139F4E;
    color: #FFF;
}

.menu-items-wrapper {
    padding: 0 15px 15px 15px;
}

.menu-item-container {
    width: 100%;
    height: 130px;
    border-radius: 16px;
    background: #FFF;
    margin-bottom: 10px;
}

.menu-item-grid {
    display: grid;
    grid-template-columns: 100px 1fr;
    padding: 15px 10px;
}

.menu-item-grid.no-photo {
    display: grid;
    grid-template-columns: 1fr;
    height: 100px;
    padding: 15px 10px;
}

.menu-item-image-container {
    grid-column: 1;
    display: flex;
    justify-content: center;
    width: 100px;
    height: 100px;
}

.menu-item-image {
    border-radius: 16px;
    object-fit: cover;
    width: 100px;
    height: 100px;
}

.menu-item-banner {
    position: absolute;
    padding: 4px 11px;
    border-radius: 100px;
    font-size: 10px;
    font-weight: 700;
    line-height: 16px;
    letter-spacing: -0.2px;
    color: #FFF;
    background: #000;
    margin-top: -15px
}

.menu-item-text-data-grid {
    grid-column: 2;
    position: relative;
    margin-left: 10px;
}

.menu-item-text-data-grid.no-photo {
    grid-column: 1;
    position: relative;
    margin-left: 0;
}

.menu-item-name {
    font-weight: 500;
    color: #222;
    margin-bottom: 5px;
}

.menu-item-description {
    color: #7D7D7D;
    font-weight: 300;
}

.menu-item-price {
    position: absolute;
    left: 0;
    bottom: 0;
    font-weight: 500;
    color: #222;
}


/* SEARCH BUTTON */
.search-initial-circle {
    background: #FFF;;
    border: 0;
    border-radius: 100px;
    width: 34px;
    min-width: 34px;
    height: 34px;
    min-height: 34px;
    cursor: pointer;
}

.search-initial-circle:hover, .general-button:hover, .circle-active {
    background: #FFF;
}

.search-button {
    display: flex;
    align-items: center;
    justify-content: flex-start;
    width: 34px;
    height: 34px;
    border: 0;
    border-radius: 100px;
    background: #FFF;
    margin-left: 15px;
    box-shadow: 0 2px 7px 0 rgba(0, 0, 0, 0.10);
    transition: width 0.5s ease;
}

.search-button.margin-right {
    margin-right: 10px;
}

.search-button.margin-left {
    margin-left: 10px;
}

.search-active {
    background: #FFF;
    width: 220px;
}

.search-button:hover {
    background: #FFF;;
}

.search-icon {
    margin-left: 7px;
}

.search-button-form {
    display: contents;
}

.search-button-input {
    font-size: 0.9rem;
    font-weight: 400;
    color: #000;
    width: 170px;
    height: 30px;
    font-family: "Lexend", sans-serif;
    border-radius: 100px;
    background: #FFF;
    opacity: 0;
    animation: appear 0.3s linear 0.3s forwards;
}

.search-button-input::placeholder {
    color: #7D7D7D;
}

.search-button-input:focus::placeholder {
    color: #FFF;
}

@keyframes appear {
    from {
        opacity: 0;
    }
    to {
        opacity: 1;
    }
}

/* END OF SEARCH BUTTON */

/* MENU ITEM DETAILS */

.menu-item-details-container {
    position: relative;
    width: 100%;
}

.return-button {
    width: 40px;
    height: 40px;
    background: #FFF;
    filter: drop-shadow(0px 2px 15px rgba(0, 0, 0, 0.10));
    border: none;
    border-radius: 16px;
    position: absolute;
    top: 10px;
    left: 15px;
    z-index: 1;
}

.details-image-container {
    height: 214px;
    width: 100%;
    overflow: hidden;
    position: relative;
}

.details-image {
    height: 100%;
    width: 100%;
    object-fit: cover;
    position: absolute;
    top: 0;
    z-index: 0;
}

.details-data-section {
    position: relative;
    border-radius: 40px 40px 0 0;
    background: #FFF;
    box-shadow: 0 -9px 20px 0 rgba(0, 0, 0, 0.25);
    margin-top: -35px;
    width: 100%;
    max-width: 100%;
    height: 100%;
}

.details-data-container {
    padding: 20px 15px 70px 15px;
    font-family: "Lexend", sans-serif;
    font-style: normal;
    line-height: 18px;
}

.details-banner {
    display: inline-block;
    padding: 5px 12px;
    border-radius: 100px;
    font-size: 12px;
    font-weight: 700;
    line-height: 16px;
    letter-spacing: -0.2px;
    color: #FFF;
    background: #000;
    margin-bottom: 17px;
}

.details-name {
    color: #222;
    font-size: 18px;
    font-style: normal;
    font-weight: 700;
    line-height: 18px;
    margin-bottom: 10px;
}

.details-name.no-banner {
    margin-top: 20px;
}

.details-description {
    color: #000;
    font-size: 14px;
    font-weight: 600;
    letter-spacing: -0.34px;
    margin-bottom: 40px;
}

.details-definition-text {
    color: #222;
    font-size: 14px;
    font-weight: 600;
    margin-bottom: 20px;
}

.details-allergens-container {
    margin-top: -10px;
    margin-bottom: 40px;
}

.details-allergen-icon {
    width: 30px;
    height: 30px;
    margin-right: 6px;
    margin-bottom: 6px;
}

.tooltip-wrapper {
    position: relative;
    display: inline-block;
}

.tooltip-content {
    position: absolute;
    top: -35px;
    box-shadow: 0 2px 15px 0 #0000001A;
    background-color: #E1E1E1;
    color: #000;
    padding: 5px 7px;
    border-radius: 10px;
    font-size: 0.8rem;
    z-index: 1000;
    pointer-events: none;
    width: max-content;
    max-width: 45vw;
    white-space: normal;
    overflow-wrap: break-word;
}

.details-fixed-footer {
    position: fixed;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 77px;
    background: linear-gradient(180deg, rgba(255, 255, 255, 0.2) 0%, rgba(255, 255, 255, 0.95) 34.99%);
}

.details-price-label {
    display: inline-flex;
    padding: 10px 0 10px 0;
    justify-content: center;
    align-items: center;
    gap: 10px;
    border-radius: 100px;
    background: #129E4D;
    position: fixed;
    bottom: 40px;
    width: calc(100% - 100px);
    margin-left: 50px;
    margin-right: 50px;
}

.details-price-text {
    color: #FFF;
    font-size: 14px;
    font-weight: 500;
    letter-spacing: -0.34px;
}

.details-list-positions-wrapper {
    margin-bottom: 40px;
}

.details-list-position-container {
    margin-bottom: 10px;
    width: calc(100% - 40px);
    height: 40px;
    border-radius: 10px;
    background: #FFF;
    filter: drop-shadow(0px 3px 6px rgba(0, 0, 0, 0.05));
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 0 20px 0 20px;
}

.details-list-position-text {
    color: #222;
    font-size: 14px;
    font-weight: 600;
}

.details-list-addition-price {
    color: #7D7D7D;
    font-size: 14px;
    font-weight: 500;
    letter-spacing: -0.34px;
}

.optional-text {
    color: #7D7D7D;
    font-weight: 400;
    letter-spacing: -0.34px;
}

/* END OF MENU ITEM DETAILS */

/* ----- LOADING SPINNER ----- */
.spinner-container {
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    height: 100%;
}

.spinner {
    transform: translate(-50%, -50%);
    border: 8px solid rgba(0, 0, 0, 0.1);
    border-top: 8px solid #6940C6;
    border-radius: 50%;
    width: 40px;
    height: 40px;
    animation: spin 1.5s linear infinite;
}

.button-spinner-container {
    display: flex;
    justify-content: center;
    align-items: center;
}

.button-spinner {
    transform: translate(-50%, -50%);
    border-width: 4px;
    border-style: solid;
    border-color: #6940C6 rgba(0, 0, 0, 0.2) rgba(0, 0, 0, 0.2);
    border-image: initial;
    border-radius: 50%;
    width: 0.8rem;
    height: 0.8rem;
    animation: 1.5s linear 0s infinite normal none running spin;
}

.absolute-spinner-container {
    position: absolute;
    left: 100px;
    top: 23px;
}

@keyframes spin {
    0% {
        transform: rotate(0deg);
    }
    100% {
        transform: rotate(360deg);
    }
}

/* ---- END -----*/

